# django-outbox-pattern

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml  sonar-project.properties  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
django_outbox_pattern/: admin.py  apps.py  bases.py  choices.py  consumers.py  decorators.py  exceptions.py  factories.py  headers.py  listeners.py  models.py  payloads.py  producers.py  settings.py
django_outbox_pattern/management/commands/: base.py  publish.py  purge.py  subscribe.py
django_outbox_pattern/migrations/: 0001_initial.py  0002_received_msg_id.py  0003_alter_published_version.py  0004_auto_20230403_1637.py  0005_published_headers.py  0006_published_published_status_27c9ec_btree.py  0007_published_published_added_idx_and_more.py
scripts/: start-formatter-lint.sh  tests.sh
tests/: settings.py
tests/integration/: callback.py  test_consumer.py  test_prodeucer.py  test_producer.py  test_publish_command.py  test_purge_command.py  test_subscribe_command.py
tests/resources/rabbitmq/: enabled_plugins  rabbitmq.conf
tests/unit/: test_consumer.py  test_models.py  test_payload.py  test_prodeucer.py  test_producer.py  test_publish_command.py  test_publish_decorator.py  test_settings.py  test_subscribe_command.py
