[tool.poetry]
name = "django-outbox-pattern"
version = "2.0.0"
description = "A django application to make it easier to use the transactional outbox pattern"
license = "MIT"
authors = ["Hugo Brilhante <hugobrilhante@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/juntossomosmais/django-outbox-pattern"
repository = "https://github.com/juntossomosmais/django-outbox-pattern"
documentation = "https://github.com/juntossomosmais/django-outbox-pattern"
keywords = ["transactional outbox patterns", "application events", "microservices"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
packages = [
    { include = "django_outbox_pattern" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.0.8"
"stomp.py" = ">=8.0.1,<9"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.6"
coverage = "*"
pre-commit = "*"

[tool.black]
line-length = 120
target_version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
force_single_line = true
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120

[tool.pylint.master]
ignore = []

[tool.pylint.messages_control]
disable = [
    "no-member",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "logging-not-lazy",
    "consider-using-f-string",
    "logging-fstring-interpolation",
    "too-many-ancestors"
]

[tool.pylint.format]
max-line-length = "120"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
